# grpc-cpp-async

./: .clang-format  .gitignore  LICENSE  README.md  grpc-cpp-async-server.Dockerfile  grpc-ubuntu2004.Dockerfile
automation/: build.sh
src/: CMakeLists.txt
src/pinger/: CMakeLists.txt  main_pinger_client.cpp  main_pinger_client_async.cpp  main_pinger_server.cpp  pinger_client.h  pinger_client_async.h
src/protos/: pinger.proto  talker.proto
src/shared/: aux.h  queue_tag.h
src/talker/: CMakeLists.txt  endpoint_handle-long_bye.h  endpoint_handle-short_hello.h  endpoint_handle.h  endpoint_queue_tag_processor.h  main_talker_async_server.cpp  main_talker_client.cpp  talker_client.h
